--- a/pwiz_tools/Shared/ProteowizardWrapper/ProteowizardWrapper.csproj
+++ b/pwiz_tools/Shared/ProteowizardWrapper/ProteowizardWrapper.csproj
@@ -102,8 +102,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Centroider.cs" />
+    <Compile Include="Model\DetailLevel.cs" />
+    <Compile Include="Model\IsolationWindow.cs" />
+    <Compile Include="Model\Precursor.cs" />
     <Compile Include="MsDataFileImpl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Model\Spectrum.cs" />
   </ItemGroup>
   <ItemGroup Condition=" '$(Platform)' == 'x64' ">
     <Reference Include="ThermoFisher.CommonCore.Data">
@@ -125,6 +129,7 @@
       <Name>CommonUtil</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
