Verify tutorial audit logs in all languages regardless of which language the test was run in.

--- a/pwiz_tools/Skyline/Skyline.csproj
+++ b/pwiz_tools/Skyline/Skyline.csproj
@@ -496,6 +496,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EnumNames.resx</DependentUpon>
     </Compile>
+    <Compile Include="Model\AuditLog\LogFormat.cs" />
     <Compile Include="Model\AuditLog\LogMessage.cs" />
     <Compile Include="Model\AuditLog\Property.cs" />
     <Compile Include="Model\AuditLog\PropertyElementNames.Designer.cs">
