* refactored nuget restore into a separate action and added RuntimeIdentifiers element in TestRunner (I don't really understand why it is necessary though)

--- a/pwiz_tools/Skyline/TestRunner/TestRunner.csproj
+++ b/pwiz_tools/Skyline/TestRunner/TestRunner.csproj
@@ -79,7 +79,12 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Platform)' == 'x86'">
+    <RuntimeIdentifiers>win-x86</RuntimeIdentifiers>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Platform)' == 'x64'">
+    <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
+  </PropertyGroup>
   <PropertyGroup>
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
