* added local download cache for SimpleFileDownloader * changed GetToolsDirectory() to return a per-process location when testing to support parallel testing * fixed TestStandardType not to launch the documentation browser when running under AlwaysUp (NB: I had to use a heuristic which would also trigger if running straight from an administrator command prompt) * changed ExportMethod() to pass transitions as files instead of standard input because using standard input when running under AlwaysUp seems broken

--- a/pwiz_tools/Skyline/TestRunner/TestRunner.csproj
+++ b/pwiz_tools/Skyline/TestRunner/TestRunner.csproj
@@ -114,6 +114,10 @@
       <Project>{13BF2FFB-50A1-4AB1-83A4-5733E36905CE}</Project>
       <Name>CommonUtil</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Skyline.csproj">
+      <Project>{DDA2EA4C-B632-4FDF-94BA-F71E4C152056}</Project>
+      <Name>Skyline</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TestRunnerLib\TestRunnerLib.csproj">
       <Project>{E3F0E34F-F9E6-4360-996F-E2054E4FA1AE}</Project>
       <Name>TestRunnerLib</Name>
