--- a/pwiz_tools/Skyline/Executables/AutoQC/AutoQC/AutoQC.csproj
+++ b/pwiz_tools/Skyline/Executables/AutoQC/AutoQC/AutoQC.csproj
@@ -11,26 +11,24 @@
     <AssemblyName>AutoQC</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <IsWebBootstrapper>true</IsWebBootstrapper>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile />
-    <PublishUrl>Z:\labkey\static\software\AutoQC-test\</PublishUrl>
+    <PublishUrl>C:\Users\vsharma\WORK\Skyline\master\pwiz\pwiz_tools\Skyline\Executables\AutoQC\AutoQC\publish\</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Web</InstallFrom>
-    <UpdateEnabled>true</UpdateEnabled>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>false</MapFileExtensions>
-    <InstallUrl>http://skyline.gs.washington.edu/software/AutoQC-test/</InstallUrl>
-    <SupportUrl>https://skyline.ms/support.url</SupportUrl>
     <ProductName>AutoQC</ProductName>
-    <PublisherName>MacCoss Lab, UW</PublisherName>
+    <PublisherName>University of Washington</PublisherName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>index.html</WebPage>
-    <ApplicationRevision>5</ApplicationRevision>
-    <ApplicationVersion>1.0.0.5</ApplicationVersion>
+    <ApplicationRevision>159</ApplicationRevision>
+    <ApplicationVersion>21.1.0.159</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -63,8 +61,7 @@
     <ManifestCertificateThumbprint>19870CA6C934F1DFEADFC678B704FD5CEF4C7F0B</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>
-    </ManifestKeyFile>
+    <ManifestKeyFile>University of Washington %28MacCoss Lab 2023%29.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -97,6 +94,9 @@
     <EmbeddedResource Include="InvalidConfigSetupForm.resx">
       <DependentUpon>InvalidConfigSetupForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="WatersLockmassDlg.resx">
+      <DependentUpon>WatersLockmassDlg.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Resources\Copy.bmp" />
     <None Include="Resources\add.bmp" />
     <None Include="Resources\Delete.bmp" />
@@ -118,6 +118,8 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="University of Washington %28MacCoss Lab 2023%29.pfx" />
+    <None Include="University of Washington %28MacCoss Lab%29.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoQcConfig.cs" />
@@ -169,6 +171,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="WatersLockmassDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WatersLockmassDlg.Designer.cs">
+      <DependentUpon>WatersLockmassDlg.cs</DependentUpon>
+    </Compile>
     <Compile Include="XmlUtil.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -179,6 +187,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Shared\Lib\Newtonsoft.Json.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="pwiz.CommonUtil, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Shared\Common\bin\x64\Release\pwiz.CommonUtil.dll</HintPath>
     </Reference>
     <Reference Include="SharedBatch, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
