--- a/pwiz_tools/Skyline/Executables/AutoQC/AutoQCTest/AutoQCTest.csproj
+++ b/pwiz_tools/Skyline/Executables/AutoQC/AutoQCTest/AutoQCTest.csproj
@@ -41,6 +41,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Shared\Lib\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="pwiz.CommonUtil, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Shared\Common\bin\x64\Release\pwiz.CommonUtil.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Xml" />
