--- a/pwiz_tools/Skyline/Executables/AutoQC/AutoQC/AutoQC.csproj
+++ b/pwiz_tools/Skyline/Executables/AutoQC/AutoQC/AutoQC.csproj
@@ -78,6 +78,9 @@
   <PropertyGroup />
   <PropertyGroup />
   <PropertyGroup />
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
   <ItemGroup>
     <Content Include="AutoQCStarter.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -97,6 +100,9 @@
     </Content>
     <EmbeddedResource Include="InvalidConfigSetupForm.resx">
       <DependentUpon>InvalidConfigSetupForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WatersLockmassDlg.resx">
+      <DependentUpon>WatersLockMassDlg.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Resources\Copy.bmp" />
     <None Include="Resources\add.bmp" />
@@ -169,6 +175,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="WatersLockMassDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WatersLockMassDlg.designer.cs">
+      <DependentUpon>WatersLockMassDlg.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="log4net">
@@ -178,6 +190,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Shared\Lib\Newtonsoft.Json.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="pwiz.CommonUtil">
+      <HintPath>..\..\..\..\Shared\Common\bin\x64\Release\pwiz.CommonUtil.dll</HintPath>
     </Reference>
     <Reference Include="SharedBatch, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
