--- a/pwiz_tools/Skyline/Executables/AutoQC/AutoQCTest/AutoQCTest.csproj
+++ b/pwiz_tools/Skyline/Executables/AutoQC/AutoQCTest/AutoQCTest.csproj
@@ -45,6 +45,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Shared\Lib\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="pwiz.CommonUtil">
+      <HintPath>..\..\..\..\Shared\Common\bin\x64\Release\pwiz.CommonUtil.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Xml" />
